fix whitespace

--- a/less/rotation-control.less
+++ b/less/rotation-control.less
@@ -182,6 +182,7 @@
   .video {
     background: #333;
     padding: 4% 10% 0 10%;
+    overflow: hidden;
     video {
       box-shadow: 0 0 30px rgba(0,0,0,0.5);
       border-radius: 5px;
